fix last item in cart not visible + hide comission on cart

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -690,6 +690,10 @@ ion-header-bar, ion-nav-bar {
     }
   }
 
+  .has-subfooter {
+    bottom: 118px;
+  }
+
   .row {
     padding: 0;
   }
